--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "antd": "^3.25.1",
-    "express": "^4.16.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mysql2": "^2.0.0"
+    "mysql2": "^2.0.0",
+    "passport": "^0.4.0",
+    "sequelize": "^5.21.2"
   }
 }
