--- a/backend/package.json
+++ b/backend/package.json
@@ -9,20 +9,23 @@
     "db:reset:production": "cross-env MIGRATION_ENV=production node ./migrations/reset"
   },
   "dependencies": {
+    "bcrypt": "3.0.6",
     "cors": "2.8.5",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
+    "express-graphql": "^0.9.0",
+    "formidable": "1.2.1",
+    "graphql": "^14.5.8",
+    "helmet": "3.21.2",
+    "jsonwebtoken": "8.5.1",
     "lodash": "4.17.15",
     "moment": "2.24.0",
-    "nodemailer": "6.3.1",
     "mysql2": "2.0.0",
+    "nodemailer": "6.3.1",
     "pg": "7.12.1",
     "pg-hstore": "2.3.3",
     "sequelize": "5.21.2",
-    "sqlite": "3.0.3",
-    "jsonwebtoken": "8.5.1",
-    "bcrypt": "3.0.6",
-    "formidable": "1.2.1",
-    "helmet": "3.21.2"
+    "sqlite": "3.0.3"
   },
   "engines": {
     "node": "8"
