Started a new component under /view BookVlieList

--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "app-backend",
   "description": "Backend",
   "scripts": {
-    "start": "cross-env NODE_ENV=localhost nodemon ./server.js",
-    "start:production": "cross-env NODE_ENV=production nodemon ./server.js",
-    "test": "nodemon --exec 'cross-env NODE_ENV=test mocha ./src/**/*.test.js --exit || exit 1'",
-    "db:reset:localhost": "cross-env MIGRATION_ENV=localhost node ./migrations/reset",
-    "db:reset:production": "cross-env MIGRATION_ENV=production node ./migrations/reset"
-
+    "start": " NODE_ENV=localhost nodemon ./server.js",
+    "start:production": " NODE_ENV=production nodemon ./server.js",
+    "test": "nodemon --exec ' NODE_ENV=test mocha ./src/**/*.test.js --exit || exit 1'",
+    "db:reset:localhost": " MIGRATION_ENV=localhost node ./migrations/reset",
+    "db:reset:production": " MIGRATION_ENV=production node ./migrations/reset"
   },
   "dependencies": {
     "cors": "2.8.5",
@@ -26,16 +25,13 @@
     "helmet": "3.21.2"
   },
   "engines": {
-    "node": "8"
+    "node": "12.13.1"
   },
-
-
   "private": true,
   "devDependencies": {
     "mocha": "6.2.2",
     "node-mocks-http": "1.8.0",
     "nodemon": "1.19.4",
     "sequelize-cli": "^5.5.1"
-
   }
 }
