--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "redux": "4.0.1",
     "redux-devtools-extension": "2.13.8",
     "redux-thunk": "2.3.0",
+    "reqwest": "^2.0.5",
     "reselect": "4.0.0",
     "styled-components": "4.1.3",
     "xlsx": "0.14.1",
