--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "react-redux": "6.0.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "2.1.5",
     "react-syntax-highlighter": "10.1.3",
     "react-test-render": "^1.1.2",
     "redux": "4.0.1",
@@ -39,12 +39,12 @@
   },
   "scripts": {
     "build": "react-scripts build",
-    "test": " REACT_APP_ENVIRONMENT=testenv react-scripts test",
+    "test": "cross-env REACT_APP_ENVIRONMENT=testenv react-scripts test",
     "eject": "react-scripts eject",
     "start": "npm run start:localhost",
-    "start:localhost": " REACT_APP_ENVIRONMENT=localhost react-scripts start",
-    "build:production": " REACT_APP_ENVIRONMENT=production npm run build",
-    "start:production": " REACT_APP_ENVIRONMENT=production react-scripts start"
+    "start:localhost": "cross-env REACT_APP_ENVIRONMENT=localhost react-scripts start",
+    "build:production": "cross-env REACT_APP_ENVIRONMENT=production npm run build",
+    "start:production": "cross-env REACT_APP_ENVIRONMENT=production react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -56,6 +56,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "cross-env": "5.2.0",
     "@types/jest": "24.0.9",
     "less": "3.9.0"
   }
