--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm start",
     "test": "nodemon --exec 'cross-env NODE_ENV=test mocha ./src/**/*.test.js --exit || exit 1'",
     "db:reset:localhost": "cross-env MIGRATION_ENV=localhost node ./migrations/reset",
     "db:reset:production": "cross-env MIGRATION_ENV=production node ./migrations/reset"
