--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "description": "Backend",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm start",
+    "start:prod": "cd frontend && npm run build && cd .. && node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'frontend/*'\" \"npm run frontend\"",
+    "client": "cd frontend && npm start",
     "test": "nodemon --exec 'cross-env NODE_ENV=test mocha ./src/**/*.test.js --exit || exit 1'",
     "db:reset:localhost": "cross-env MIGRATION_ENV=localhost node ./migrations/reset",
     "db:reset:production": "cross-env MIGRATION_ENV=production node ./migrations/reset"
