--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "description": "Backend",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "cd frontend && npm run build && cd .. && node server.js",
+    "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'frontend/*'\" \"npm run frontend\"",
-    "client": "cd frontend && npm start",
-    "install": "npm install && cd frontend && npm install",
+    "client": "cd frontend && npm run start",
+    "heroku-postbuild": "cd frontend && npm install && npm run build",
     "test": "nodemon --exec 'cross-env NODE_ENV=test mocha ./src/**/*.test.js --exit || exit 1'",
     "db:reset:localhost": "cross-env MIGRATION_ENV=localhost node ./migrations/reset",
     "db:reset:production": "cross-env MIGRATION_ENV=production node ./migrations/reset"
