--- a/config/config.json
+++ b/config/config.json
@@ -1,27 +1,7 @@
 {
 
-  "development": {
-    "username": "rhv9v6m4xs4n3s9z",
-    "password": "w0u0c0ib0yi32601",
-    "database": "gd31ihoh0gt79svs",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
-  },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
-  },
   "production": {
-    "username": "rhv9v6m4xs4n3s9z",
-    "password": "w0u0c0ib0yi32601",
-    "database": "gd31ihoh0gt79svs",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "use_env_variable": "JAWSDB_URL",
+    "dialect": "mysql"
   }
 }
