--- a/client/package.json
+++ b/client/package.json
@@ -40,7 +40,7 @@
     "yup": "0.26.10"
   },
   "scripts": {
-    "build": "react-scripts build",
+    "build": "REACT_APP_ENVIRONMENT=production react-scripts build",
     "test": "REACT_APP_ENVIRONMENT=testenv react-scripts test",
     "eject": "react-scripts eject",
     "start": "npm run start:localhost",
