--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "workbench.colorCustomizations": {
-    "titleBar.activeForeground": "#000",
-    "titleBar.inactiveForeground": "#000000CC",
-    "titleBar.activeBackground": "#eb2568",
-    "titleBar.inactiveBackground": "#eb2568CC"
-  }
+    "git.ignoreLimitWarning": true
 }
